src/test/ui/export-import.rs
use m::unexported;
//~^ ERROR: is private

mod m {
    pub fn exported() { }

    fn unexported() { }
}


fn main() { unexported(); }
